Formatting
Formatted project according to eclipse project settings